- Added `npm run verify:360:release:managed` helper to auto-generate a temporary adapter maintenance policy (disabling missing-plugin lanes), run strict adapter-doctor preflight with that policy, then run strict `verify:360` without global adapter-disable env leakage into full test lanes.
- Added optional verify env override `WEFTEND_360_SAFE_RUN_ADAPTER` (validated adapter set) for deterministic pair-lane control; value is recorded in idempotence context/report policy lines.
- Invalid `WEFTEND_360_SAFE_RUN_ADAPTER` values now fail closed inside verify corridor and still emit fail receipts/reports (`VERIFY360_SAFE_RUN_ADAPTER_INVALID`), preserving evidence-first behavior.
- `verify:360:harness` now covers invalid adapter override failure path and verifies pointer non-advance + receipt/report persistence.
- Added Green Team workflow contract test for `.github/workflows/weftend_artifact_meter.yml` to enforce analysis-only (`--withhold-exec`) and bounded artifact-output workflow invariants in test/proofcheck loops.
- Added Green Team managed-release-helper contract test for `scripts/verify_360_release_managed.js` to pin strict preflight semantics and prevent adapter-disable env leakage into full verify runs.
- Added Green Team container local-only contract test for `src/runtime/container/docker_probe_v0.ts` to pin allowed Docker command surface (`version`, `image inspect`) and block implicit pull/login/run/build paths.
- Added Green Team contract test for `.github/workflows/weftend_verify360.yml` to pin managed-verify workflow behavior and artifact upload path.
- Added Green Team docs contract test for release-facing docs (`README.md`, `docs/QUICKSTART.txt`, `docs/RELEASE_NOTES.txt`, `docs/GITHUB_ACTIONS.md`) so workflow/command references stay in sync.
- Extended docs contract coverage to include `docs/RELEASE_CHECKLIST_ALPHA.md` workflow parity references.